<resources>
    <string name="app_name">Nmedia</string>
    <string name="description">My first app on android www.google.com</string>
    <string name="ad_title">Ad</string>
    <string name="posts_title">News</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="description_post_save">Save</string>
    <string name="add">Add</string>
    <string name="share_post">Post contetnt</string>
    <string name="like_channel">Likes</string>
    <string name="like_channel_descriprion_text">Channel for like notifications</string>
    <string name="user_liked_notification">User %1$s liked post from %2$s</string>
    <string name="new_post_notification">%1$s published new post</string>
    <string name="new_post_channel">New post</string>
    <string name="new_post_channel_description">Channel for new posts notification</string>
    <string name="error_loading">Error loading</string>
    <string name="retry_action_title">Retry</string>
    <string name="error_saving">Saving error</string>
    <string name="update_new_post">New post</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="auth_need">Auth need</string>
    <string name="user_name">Name</string>
    <string name="retry_password">Retry password</string>
    <string name="register">Register</string>
    <string name="empty_name">Enter name</string>
    <string name="empty_login">Enter login</string>
    <string name="empty_pass">Password is empty</string>
    <string name="password_are_different">Passwords are different</string>
    <string name="pick_photo">Select photo</string>
    <string name="attach_file">Attach button</string>
    <string name="add_photo">Add photo</string>
    <string name="post_image">Post image</string>
    <string name="delete_photo">Photo delete</string>
</resources>
