<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PostFragment">

    <EditText
        android:id="@+id/postTextEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/postImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/deletePhoto"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:icon="@drawable/ic_baseline_close_24"
        app:layout_constraintEnd_toEndOf="@id/postImage"
        app:layout_constraintTop_toTopOf="@id/postImage"
        android:contentDescription=""/>

    <ImageView
        android:id="@+id/postImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/post_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postTextEditText"
        android:visibility="gone"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/pickPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/pick_photo"
        android:focusable="true"
        android:src="@drawable/ic_pick_photo"
        android:visibility="invisible"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@id/takePhoto"
        app:layout_constraintEnd_toEndOf="@id/attachFab"
        app:layout_constraintStart_toStartOf="@id/attachFab" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/takePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/pick_photo"
        android:focusable="true"
        android:src="@drawable/ic_baseline_add_a_photo_24"
        android:visibility="invisible"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@id/attachFab"
        app:layout_constraintEnd_toEndOf="@id/attachFab"
        app:layout_constraintStart_toStartOf="@id/attachFab" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/attachFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:contentDescription="@string/attach_file"
        android:focusable="true"
        android:src="@drawable/ic_baseline_attach_file_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
